--- a/index.html
+++ b/index.html
@@ -13,8 +13,25 @@
   <link href="assets/css/custom.css" rel="stylesheet">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
+  <meta property="og:site_name" content="Press Kite" />
+  <meta property="og:title" content="Press Kite" />
+  <meta property="og:type" content="website" />
+  <meta property="fb:app_id" content="1967491560190585" />
+  <meta property="og:image" content="https://s3.amazonaws.com/press-kite-resources/pk_fb_landingpage1.png" />
+  <meta property="og:description" content="Create a stunning press kit for your startup and start getting media coverage." />
+  <meta property="og:url" content="https://presskite.com" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@presskite" />
+  <meta name="twitter:creator" content="@presskite" />
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29770675-11"></script>
+  <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments)};
+   gtag('js', new Date());
 
-
+   gtag('config', 'UA-29770675-11');
+  </script>
 </head>
 <body data-gr-c-s-loaded="true" class="pushable">
 
@@ -34,8 +51,8 @@
           </div>
           
           <div class="right item">
-            <a class="ui button login">Log in</a>
-            <a class="ui button signup">Sign Up</a>
+            <a class="ui button login" href="/login">Log in</a>
+            <a class="ui button signup" href="/registration">Sign Up</a>
           </div>
         </div>
       </div>
@@ -44,7 +61,7 @@
         <h1 class="ui header hello">
           Press Kits For Startups
         </h1>
-        <div class="ui huge primary button">Get Started Now <i class="right arrow icon"></i></div>
+        <a class="ui huge primary button" href="/registration">Get Started Now <i class="right arrow icon"></i></a>
       </div>
       
     </div>
@@ -105,8 +122,8 @@
         Built to spec for
         <div class="ui header centered highlight">
           modern products
-        </h1>
       </div>
+    </h1>
 
       <div class="ui container">
         <svg width="50" height="50">
@@ -266,7 +283,7 @@
             </div>
             <div class="two column row stackable">
               <div class="left floated column middle aligned">
-                <div class="ui huge secondary button aligned middle">Get Started Now <i class="right arrow icon"></i></div>
+                <a class="ui huge secondary button aligned middle" href="/registration">Get Started Now <i class="right arrow icon"></i></a>
               </div>
               <div class="right floated column right aligned">                
                 <div class="content social center aligned">
@@ -280,6 +297,23 @@
               </div>
             </div>
           </div>
+</div>
+</div>
+<img src="https://qxiy6gq9lk.execute-api.us-east-1.amazonaws.com/prod/pixel.gif" style:"display:none;">
+<script>
 
+(function() {
+  const domain = '//app.' + window.location.host
+  let currentHref = ''
+  let links = document.body.getElementsByClassName("button")
+  for (let i = 0; i<links.length; i++) {
+    console.log(links[i]);
+    currentHref = links[i].getAttribute('href')
+    links[i].setAttribute('href', domain + currentHref)
+  }
+})();
+</script>
+</body>
+</html>
 
 
