--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html class="gr__semantic-ui_com"><head>
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TXKRVTF');</script>
+<!-- End Google Tag Manager -->
+
+
   <!-- Standard Meta -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -23,17 +33,12 @@
   <meta property="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@presskite" />
   <meta name="twitter:creator" content="@presskite" />
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29770675-11"></script>
-  <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments)};
-   gtag('js', new Date());
-
-   gtag('config', 'UA-29770675-11');
-  </script>
 </head>
 <body data-gr-c-s-loaded="true" class="pushable">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TXKRVTF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 
   <!-- small chat script -->
